--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "hbs": "^4.0.1",
     "jade": "~1.11.0",
     "jquery": "^3.2.1",
+    "lodash": "^4.17.4",
     "mongoose": "^4.13.9",
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5"
