--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "hbs": "^4.0.1",
     "jade": "~1.11.0",
     "jquery": "^3.2.1",
+    "jquery-form-validator": "^2.3.77",
     "jsonwebtoken": "^8.1.0",
     "lodash": "^4.17.4",
     "mongoose": "^4.13.9",
