--- a/package.json
+++ b/package.json
@@ -8,17 +8,19 @@
   "dependencies": {
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
+    "crypto-js": "^3.1.9-1",
     "debug": "~2.6.9",
     "express": "~4.15.5",
     "hbs": "^4.0.1",
     "jade": "~1.11.0",
     "jquery": "^3.2.1",
     "jquery-form-validator": "^2.3.77",
-    "jsonwebtoken": "^8.1.0",
+    "jsonwebtoken": "^8.1.1",
     "lodash": "^4.17.4",
     "mongoose": "^4.13.9",
     "morgan": "~1.9.0",
     "semantic-ui": "^2.2.14",
-    "serve-favicon": "~2.4.5"
+    "serve-favicon": "~2.4.5",
+    "validator": "^9.4.0"
   }
 }
