--- a/react/package.json
+++ b/react/package.json
@@ -22,7 +22,7 @@
     "typescript": "^2.7.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node .././app.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
