--- a/react/package.json
+++ b/react/package.json
@@ -11,13 +11,11 @@
     "babel-eslint": "^7.2.3",
     "eslint": "4.1.1",
     "flow-bin": "^0.66.0",
-    "mobx": "^4.0.2",
-    "mobx-react": "^5.0.0",
+    "jquery": "^3.3.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
-    "redux": "^3.7.2",
     "superagent": "^3.8.2",
     "typescript": "^2.7.2"
   },
