--- a/react/package.json
+++ b/react/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "@babel/core": "^7.0.0-beta.40",
     "@babel/plugin-transform-react-jsx": "^7.0.0-beta.40",
+    "acorn": "^5.5.3",
+    "acorn-dynamic-import": "^3.0.0",
     "babel-eslint": "^7.2.3",
     "eslint": "4.1.1",
     "flow-bin": "^0.66.0",
