--- a/react/package.json
+++ b/react/package.json
@@ -16,6 +16,7 @@
     "babel-eslint": "^7.2.3",
     "eslint": "4.1.1",
     "flow-bin": "^0.66.0",
+    "babel-core": "^6.26.0",
     "jquery": "^3.3.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
