--- a/react/package.json
+++ b/react/package.json
@@ -6,42 +6,16 @@
     "node": "8.9.0"
   },
   "dependencies": {
-    "@babel/core": "^7.0.0-beta.44",
-    "@babel/plugin-transform-react-jsx": "^7.0.0-beta.40",
     "acorn": "^5.5.3",
     "acorn-dynamic-import": "^3.0.0",
     "acorn-globals": "^4.1.0",
     "acorn-jsx": "^4.1.1",
-    "babel": "^6.23.0",
-    "babel-eslint": "^7.2.3",
-    "eslint": "4.1.1",
-    "flow-bin": "^0.66.0",
-    "jquery": "^3.3.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.1",
-    "superagent": "^3.8.2",
-    "typescript": "^2.7.2"
+    "mongoose": "^5.0.13"
   },
   "scripts": {
     "start": "node .././app.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  },
-  "babel": {
-    "plugins": [
-      "transform-decorators-legacy"
-    ],
-    "presets": [
-      "react-app"
-    ]
-  },
-  "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4"
   }
 }
