--- a/react/package.json
+++ b/react/package.json
@@ -12,7 +12,8 @@
     "acorn-dynamic-import": "^3.0.0",
     "acorn-globals": "^4.1.0",
     "acorn-jsx": "^4.1.1",
-    "eslint": "4.1.1",
+    "auth0-js": "^9.4.2",
+    "eslint": "^4.19.1",
     "flow-bin": "^0.66.0",
     "jquery": "^3.3.1",
     "react": "^16.2.0",
@@ -22,6 +23,7 @@
     "superagent": "^3.8.2",
     "typescript": "^2.7.2"
   },
+  "proxy": "http://localhost:11000/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
